terraform/Igw.tf
resource "aws_internet_gateway" "igw" {

  vpc_id = aws_vpc.devops_vpc.id

  tags = {
    Name = "IGW"
  }

}
